--- a/css/main.css
+++ b/css/main.css
@@ -264,10 +264,10 @@ tbody tr:hover {
     content: "Name";
   }
   table tbody tr td:nth-child(4):before {
-    content: "Link";
+    content: "Server 1";
   }
   table tbody tr td:nth-child(5):before {
-    content: "Report";
+    content: "Server 2";
   }
   table tbody tr td:nth-child(6):before {
     content: "Donasi";
